# spine-codec

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  release-please-config.json
.github/workflows/: python.yml
configs/: train.yaml
spine/: __init__.py  cli.py  config.py  data.py  decoder.py  discriminators.py  ema.py  encoder.py  hf.py  losses.py  model.py  nn.py  quantizer.py  tools.py  train.py  transformer.py
tests/: test_config.py  test_hf.py  test_integration.py  test_model.py
