[project]
name = "spine-codec"
version = "0.1.0"
description = "A neural audio codec for expressive speech"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "twango.dev" }]
keywords = ["neural-audio-codec", "speech", "tts", "ddsp", "fsq"]

dependencies = [
    "torch",
    "torchaudio",
    "vector-quantize-pytorch",
    "einops",
    "pyyaml",
    "huggingface-hub>=1.21.0",
    "safetensors>=0.8.0",
    "torchcodec>=0.14.0",
]

[project.optional-dependencies]
train = ["wandb"]

[project.scripts]
spine = "spine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spine"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "wandb>=0.28.0",
]
