[project]
name = "spine-codec"
version = "0.1.0"
description = "A neural audio codec for expressive speech"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "James Ding" }]
keywords = ["neural-audio-codec", "speech", "tts", "ddsp", "fsq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "vector-quantize-pytorch>=1.14",
    "einops>=0.7",
    "pyyaml>=6.0",
    "huggingface-hub>=1.0",
    "safetensors>=0.8.0",
    "torchcodec>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/twangodev/spine-codec"
Repository = "https://github.com/twangodev/spine-codec"
Issues = "https://github.com/twangodev/spine-codec/issues"
"Model Card" = "https://huggingface.co/twangodev/spine-codec"

[project.optional-dependencies]
train = ["wandb"]

[project.scripts]
spine = "spine.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spine"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "poethepoet>=0.32.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "wandb>=0.28.0",
]

[tool.poe.tasks]
lint             = "ruff check ."
format           = "ruff format --check ."
fmt              = "ruff format ."
typecheck        = "ty check"
test             = "pytest"
test-integration = "pytest -m integration"
check            = ["lint", "format", "typecheck", "test"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: slow end-to-end test that downloads LibriSpeech and the pretrained model",
]
